# ChangeLog for x11-libs/qt-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qt-core-4.5.3.ebuild:
  Temporarily disabling translations generation

*qt-core-4.5.3 (02 Oct 2009)

  02 Oct 2009; Alex Alexander <wired@gentoo.org> +qt-core-4.5.3.ebuild:
  version bump

  13 Sep 2009; Dominik Kapusta <d@ayoy.net> metadata.xml:
  Added exceptions flag description.

  11 Aug 2009; Alex Alexander <wired@gentoo.org> qt-core-4.5.9999.ebuild,
  qt-core-4.9999.ebuild:
  added setqtenv in src_install, thanks to Tommy[D]

  27 Jul 2009; Alex Alexander <wired@gentoo.org> qt-core-4.9999.ebuild:
  fixed qt-core 4.9999 - thanks to kent\n

  27 Jun 2009; Dror Levin <spatz@psybear.com> -qt-core-4.5.2.ebuild:
  Moved to tree.

  27 Jun 2009; Davide Pesavento <davidepesa@gmail.com> -qt-core-4.5.1-r1.ebuild,
  -files/qt-core-4.5-boilerplate.diff:
  Drop old.

  26 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qt-core-4.5.9999.ebuild,
  qt-core-4.9999.ebuild:
  Cleanup IUSE in live ebuilds too.

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.9999.ebuild, qt-core-4.9999.ebuild:
  Fix translations again *sigh*

  25 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qt-core-4.5.2.ebuild:
  Drop redundant IUSE defaults

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.9999.ebuild, qt-core-4.9999.ebuild:
  Restore translation installation

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.9999.ebuild, qt-core-4.9999.ebuild:
  Fix broken manifests

*qt-core-4.5.2 (25 Jun 2009)

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org> +qt-core-4.5.2.ebuild:
  Version bump to 4.5.2

  21 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  +files/qt-4.5-nolibx11.diff, qt-core-4.5.1-r1.ebuild,
  -files/qt-core-4.5-nolibx11.diff:
  Change patch name for consistency. Minor style changes.

*qt-core-4.5.1-r1 (02 Jun 2009)
