@@ -4,10 +4,10 @@ AUX rcc.pro 3440 RMD160 42e65efa8dc027f8a2b6c933243a91c1cac96092 SHA1 017ea0aea7
 AUX uic.pro 3671 RMD160 b6d3c392a67b66f6996134975e99db03a9987baf SHA1 f87fff37256b5c966e4d21b0fb6cb64b717f3d07 SHA256 904084b6d936fb9bab33d3592ec69dc9872708a74834f0cb498e8153f784c7fc
 DIST qt-everywhere-opensource-src-4.6.0-tp1.tar.gz 146815131 RMD160 b8526a69e7b5817f32d0f3f7133bf9213c0668bf SHA1 4394bea076279ea090549d3caa00cc1f5e33a22b SHA256 9cfe0418699e231587182b441c8f6ca68f109059c62bfc8dd9daeafb8277d211
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
-EBUILD qt-core-4.5.3.ebuild 6075 RMD160 b7dff20dc4bc1514ec62192198fb934c4897b766 SHA1 c0ece9924b61cd4c75404ac0f1d4bed348a8354e SHA256 e4b51c1a270062fc2a8051d93aceccf353fa100950cf0be8823a42f4f8e80f07
+EBUILD qt-core-4.5.3-r1.ebuild 6254 RMD160 64c48739b4fb31a0fca0b25595c7db4d5e9b5cab SHA1 279bf10c2832752d13339352c3e4acb7fe731317 SHA256 2823cd94d3557ce4043e09c5537747d26cd6da721cd21983538552c8e1cf4923
 EBUILD qt-core-4.5.9999.ebuild 5913 RMD160 05e3010749f97e842682628877977ff2a86efca0 SHA1 410e6fb2e001d62a1319d19d68616e0dbea71bdd SHA256 7765ac9fd77cecdc0646d9235a71e4061d82d6b9c00d9cfd8d9add9d7209cc85
 EBUILD qt-core-4.6.0_alpha_pre1-r1.ebuild 5800 RMD160 9ca2793dd7ec966cda01e884d12a8bd8064518b0 SHA1 bdfd4fd1af5fa8beeada1eee975b6e541bd4d440 SHA256 673a0631690250564db67b9c0c9cb46e33e4e636ee8a9b1026fe79faafcf967f
 EBUILD qt-core-4.6.9999.ebuild 5789 RMD160 79561a441026b6ff01a8021341cc6f841d2e444a SHA1 a31fe15637ebed8a9dcdfa9308fd47bfc535be2c SHA256 7f2a0c75eea5327a13a7880000bd4307bbece5d6fbc74209390d9421bfc53879
 EBUILD qt-core-4.9999.ebuild 5789 RMD160 79561a441026b6ff01a8021341cc6f841d2e444a SHA1 a31fe15637ebed8a9dcdfa9308fd47bfc535be2c SHA256 7f2a0c75eea5327a13a7880000bd4307bbece5d6fbc74209390d9421bfc53879
-MISC ChangeLog 6805 RMD160 9205ac0dd05abbddd19f83f78c93d3248d10f1be SHA1 1097bd372547e8e2fdbdb4721f1609649eead462 SHA256 f92e4d8377d13316f2b3b40b715c86c9ed0e9ddf92d71c98e94f43470e70a49e
+MISC ChangeLog 7033 RMD160 abad8ad6b26f550246dc8f143ddca4497c525529 SHA1 88a98091f3d8176a7cdd6cb824f319f54efea9a4 SHA256 5adc995e25e46b93b1283213e791c1c8d7706aa05f6d39411730aec8fad0614e
 MISC metadata.xml 659 RMD160 0baefcd9e6256860c77e21e41731e266ad1e6b15 SHA1 40df7b57d6ab5c3e553a4b4140ac0ddf70770507 SHA256 dafab6532f4300d81216f626a8e132a81785d27e45ea10d8efb4052bcb593aed
