@@ -4,7 +4,7 @@ AUX hardcoded_fonts.patch 520 RMD160 cdc8f5b4db20b4eede5eabad61ea7893e7b2fc8f SH
 AUX libqt4-read-kde4-kdeglobals.patch 7450 RMD160 f84a5b43917ae41e5b71cfd9f8b141e16c752ac4 SHA1 f23a0a1d6a4aa11e88c707d88ad54e09ebb43f65 SHA256 d11ac0946cb1ce6fadfefd73957db75edd989a985d7751d836bb4deb97688fb7
 DIST qt-everywhere-opensource-src-4.6.0-tp1.tar.gz 146815131 RMD160 b8526a69e7b5817f32d0f3f7133bf9213c0668bf SHA1 4394bea076279ea090549d3caa00cc1f5e33a22b SHA256 9cfe0418699e231587182b441c8f6ca68f109059c62bfc8dd9daeafb8277d211
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
-EBUILD qt-gui-4.5.3.ebuild 5849 RMD160 4e568ee2189ab1114cbcad622643dc259180b772 SHA1 e545cac61acceb9a98b36750fa07a8229c3effb3 SHA256 da4e06529fda0eb11734a57151016f9100bba9317f683cfea1540e091899e36a
+EBUILD qt-gui-4.5.3-r1.ebuild 5907 RMD160 b309bbe8b5f8dc529a9703c43dc31387f57f25ee SHA1 23ac6e2df0ca40cc7c05f77f4546933ac25ddf5f SHA256 1a8394f6ad76403ae0d04142eefbfae59f9e8f95a44aeb77181048a61e3e4bce
 EBUILD qt-gui-4.5.9999.ebuild 5375 RMD160 7e6e4661ad649eeae7e27447486ec8e9d7975cdf SHA1 bb742e5c837890fb8b5d4829aa9909b2f74f422c SHA256 8f9dac01b6982bf9a8dcf85ec59d4fc9714af9ed7c33c70aa68d13b77609cf23
 EBUILD qt-gui-4.6.0_alpha_pre1-r2.ebuild 5381 RMD160 b0b702f531e6acda6d7ee76efab0dcab4367b037 SHA1 832d6f212ea9b4ff91e99777bc3deb09d302636b SHA256 4a607e91ca2790f064b86b1cb40d16d69fd558b1b5ffb61141c614660ce4af97
 EBUILD qt-gui-4.6.9999.ebuild 5338 RMD160 3acd58c07157692a9004276ce0fcedce4894c279 SHA1 f20dc690e8e6e6ddadd783e2e060fd1245329241 SHA256 001622bd59751ae498356ebd2ff74acf6fcdddb67377f0fb2ca32cb40c26757d
