@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qt-core-4.5.3-r1 (02 Oct 2009)
+
+  02 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> -qt-core-4.5.3.ebuild,
+  +qt-core-4.5.3-r1.ebuild:
+  Added lconvert, lrelease and lupdate (moved from qt-gui) to allow
+  generating translations
+
   02 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qt-core-4.5.3.ebuild:
   Temporarily disabling translations generation
 
